@@ -1,0 +1,29 @@
+# -*- coding: utf-8 -*-
+# Copyright 2017 Yelp
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+# http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+"""Job that sets the partitioner."""
+
+from mrjob.job import MRJob
+
+
+class MRPartitioner(MRJob):
+
+    PARTITIONER = 'org.apache.hadoop.mapred.lib.HashPartitioner'
+
+    def mapper(self, key, value):
+        pass
+
+
+if __name__ == '__main__':
+    MRPartitioner.run()
