@@ -33,6 +33,8 @@ v0.6.0, 2017-03-?? -- ???
    * s3_sync_wait_time
    * s3_upload_part_size
    * ssh_tunnel_to_job_tracker
+ * removed deprecated switches:
+   * --partitioner
  * removed deprecated JOB_FLOW and *SCRATCH cleanup types
 
 v0.5.8, 2017-02-01 -- upload_dirs, pre-filters
